✨ Fix Articles page for overflow

--- a/src/pages/Articles/Articles.module.scss
+++ b/src/pages/Articles/Articles.module.scss
@@ -1,27 +1,32 @@
 @use '@styles/variables.module.scss';
 @use '@styles/colors.module.scss';
+@use '@styles/mixins.scss';
 
 .articlesPage {
   height: variables.$app-min-height;
   padding: 1.5rem 2rem;
 
-  .articlesListPanel {
-    height: 100%;
+  .articlesListSection {
+    .articlesListSectionContent {
+      height: 100%;
+      margin: 6px;
 
-    .articlesList {
-      overflow: scroll;
+      .articlesList {
+        overflow: clip;
+        overflow-y: scroll;
 
-      .myArticlesCard {
-        padding: 0.5rem 1.5rem;
-        border-radius: 16px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        background-color: white;
-        cursor: pointer;
-        &:hover {
-          background-color: colors.$grey-background;
-        }
-        &.selectedArticleCard {
-          background-color: colors.$grey-background;
+        .myArticlesCard {
+          padding: 0.5rem 1.5rem;
+          border-radius: 16px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          background-color: white;
+          cursor: pointer;
+          &:hover {
+            background-color: colors.$grey-background;
+          }
+          &.selectedArticleCard {
+            background-color: colors.$grey-background;
+          }
         }
       }
     }
@@ -36,6 +41,7 @@
     border-radius: 24px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: white;
+    overflow: auto;
   }
 }
 
@@ -52,5 +58,15 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       background-color: white;
     }
+  }
+}
+
+@include mixins.for-phone-only {
+  .articleDetailSection {
+    height: 50vh;
+  }
+
+  .articlesListSection {
+    height: 33vh;
   }
 }
